# jansson-cpp

./: .gitignore  CMakeLists.txt  CMakeLists.txt.backup  FINAL_SUMMARY.md  IMPLEMENTATION_SUMMARY.md  PlanTesting.md  PlanTesting2.md  PlanTesting3.md  README.rst  build_and_test.sh  compile_test.cpp  create_test_txt.py  fix_jansson_cpp.patch  fix_jansson_cpp.sh  jansson.h  jansson_config.h  json_demo  modernization_summary.md  plan.md  plan_tests.md  reproduce.py  reproduce_error.py  simple_test.cpp  test.cpp  test_build.py  test_cpp  test_dump.cpp  test_error  test_error_cpp  test_load.cpp  test_memory  test_strconv  test_strconv.cpp  test_utf  test_utf_edge_cases  verify_modernization.py  verify_modernization_fixed.py
cpp_tests/: IMPLEMENTATION_SUMMARY.md  demo_cpp.cpp  test_convenience.cpp  test_cpp  test_cpp.cpp  test_error.cpp  test_error_cpp.cpp  test_json_dumper.cpp  test_loader  test_loader.cpp  test_memory.cpp  test_pack_unpack.cpp  test_utf.cpp  test_utf_edge_cases.cpp
cpp_tests/demo/: json_demo.cpp
cpp_tests/src/: jansson_config.h  jasson_config.h
cpp_tests/src/jasson_cpp/: jasson.hpp  json_convenience.hpp  json_factory.hpp
demo/: README.md  json_demo.cpp
examples/: CMakeLists.txt  README.md  advanced_features_example.cpp  error_handling_example.cpp  example.cpp  json_array_example.cpp  json_object_example.cpp  performance_example.cpp  simple_parse.cpp  type_conversion_example.cpp
include/json/: jasson.hpp  json_factory.hpp  json_types.hpp
jansson-cpp/: test_modernized.cpp
jansson-cpp/include/: hashtable.hpp  jansson_config.hpp  jansson_private.hpp  jansson_private_config.hpp  lookup3.hpp  strbuffer.hpp  utf.hpp
jansson-cpp/src/: dtoa.cpp  dump.cpp  dump.cpp.orig  dump.cpp.rej  error.cpp  hashtable.cpp  hashtable_seed.cpp  hashtable_seed.cpp.rej  json.cpp  load.cpp  memory.cpp  pack_unpack.cpp  pack_unpack.cpp.rej  strbuffer.cpp  strconv.cpp  utf.cpp  value.cpp  value.cpp.rej  version.cpp
jasson_cpp/: README_HASHTABLE.md  README_STRING_CONVERTER.md  error.hpp  hashtable.cpp  hashtable.hpp  hashtable_compat.cpp  hashtable_compat.h  hashtable_seed.cpp  hashtable_seed.hpp  hashtable_simple.hpp  hashtable_wrapper.cpp  hashtable_wrapper.h  jasson.hpp  json_config.hpp  json_convenience.hpp  json_dumper.cpp  json_dumper.hpp  json_extensions.hpp  json_factory.hpp  json_loader.cpp  json_loader.hpp  json_packer.cpp  json_types.hpp  json_types.hpp.backup  json_unpacker.cpp  json_value.hpp  strbuffer.hpp  strconv_wrapper.hpp  string_converter.cpp  type_traits.hpp
src/: error.c  error.cpp  error.hpp  hashtable.c  hashtable.cpp  hashtable.hpp  hashtable_impl.hpp  hashtable_seed.c  hashtable_simple.cpp  hashtable_simple.hpp  jansson.h  jansson_c_interface.cpp  jansson_cpp.h  jansson_private.h  jansson_private_config.h  jasson.hpp  json_convenience.hpp  json_dumper.cpp  json_dumper.hpp  json_extensions.hpp  json_loader.cpp  json_loader.hpp  json_packer.cpp  json_packer.hpp  json_types.cpp  json_unpacker.cpp  json_unpacker.hpp  json_value.hpp  lookup3.hpp  memory.c  memory.cpp  memory.h  strbuffer.c  strbuffer.cpp  strbuffer.h  strbuffer_compat.h  string_converter.hpp  utf.c  utf.cpp  utf.h  (+1 more)
test/: CMakeLists.txt
test-linkage/: CMakeLists.txt  IMPROVEMENTS.md  README.md  README_TESTS.md  SUMMARY.md  build_and_test.sh  build_tests.sh  implementation_summary.sh  jansson-cpp.cpp  jansson-cpp.hpp  jansson.h  jansson_c_minimal.cpp  jansson_cpp.cpp  jansson_cpp.hpp  libjansson.so.2  libjansson.so.2.14.0  run_demo.sh  run_tests.sh  setup_googletest.sh  test_advanced.c  test_arrays.cpp  test_basic.c  test_basic.cpp  test_basic_types.cpp  test_comprehensive.cpp  test_error_handling.c  test_json_builder.cpp  test_link  test_linkage  test_linkage.cpp  test_literals_and_exceptions.cpp  test_objects.cpp  test_string_conversion.cpp  verify_requirements.sh
test-linkage-c/: CMakeLists.txt  README.md  run_tests.sh  test_linkage.c
test-linkage-static/: CMakeLists.txt  README.md  test_complex_structures.cpp  test_exceptions.cpp  test_json_builder.cpp  test_json_to_string.cpp  test_literal_operators.cpp  test_string_conversion.cpp  test_summary.md  verify_setup.sh
test_cpp/: test_error.c  test_error.cpp  test_error_cpp.cpp  test_memory.cpp  test_utf.cc  test_utf_edge_cases.cc
tests/: CMakeLists.txt  memory_leak_detector.hpp  simple_test.cpp  test_base.hpp  test_data_generators.hpp  test_main.cpp  test_utils.hpp
